--- a/index.html
+++ b/index.html
@@ -1,48 +1,51 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="utf-8">
-	<title>Drag and Drop Puzzle Game</title>
-	<link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
-	<link href="css/main.css" rel="stylesheet" type="text/css">
+    <meta charset="utf-8">
+    <title>Drag and Drop Puzzle Game</title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-	<header id="headLine">
-		<h1 class="hidden">Drag and Drop Puzzle Game</h1>
-		<h2>Fun With JavaScript!</h2>
-		<p>Drag and Drop the Puzzle Pieces!</p>
-	</header>
+    <header id="headLine">
+        <h1 class="hidden">Drag and Drop Puzzle Game</h1>
+        <h2>Fun With JavaScript!</h2>
+        <p>Drag and Drop the Puzzle Pieces!</p>
+    </header>
 
-	<section id="game-boards">
-		<h2 class="hidden">The Game Board</h2>
+    <section id="game-boards">
+        <h2 class="hidden">The Game Board</h2>
 
-		<!-- these are the draggable pieces -> drag them to the right -->
-		<div class="puzzle-pieces">
-			<h3 class="hidden">The Drag Zone</h3>
-			<img src="images/topLeft0.jpg" alt="top left" class="puzzle-image">
-			<img src="images/topRight0.jpg" alt="top left" class="puzzle-image">
-			<img src="images/bottomLeft0.jpg" alt="top left" class="puzzle-image">
-			<img src="images/bottomRight0.jpg" alt="top left" class="puzzle-image">
-		</div>
+        <!-- these are the draggable pieces -> drag them to the right -->
+        <div class="puzzle-pieces">
+            <h3 class="hidden">The Drag Zone</h3>
+            <img src="images/topLeft0.jpg" alt="top left" class="puzzle-image 0">
+            <img src="images/topRight0.jpg" alt="top left" class="puzzle-image 1">
+            <img src="images/bottomLeft0.jpg" alt="top left" class="puzzle-image 2">
+            <img src="images/bottomRight0.jpg" alt="top left" class="puzzle-image 3">
+        </div>
 
-		<!-- drop the puzzle pieces here -->
-		<div class="puzzle-board">
-			<h3 class="hidden">The Drop Zones</h3>
-		</div>
-	</section>
+        <!-- drop the puzzle pieces here -->
+        <div class="puzzle-board">
+            <h3 class="hidden">The Drop Zones</h3>
+        </div>
+    </section>
 
-	<footer>
-		<!-- <h2 class="hidden">Switch the Puzzle</h2> -->
-		<p>click thumb to change pieces!</p>
-		<nav id="buttonHolder">
-			<h3 class="hidden">Select Image</h3>
-			<img src="images/buttonZero.jpg" alt="thumbnail">
-			<img src="images/buttonOne.jpg" alt="thumbnail">
-	    <img src="images/buttonTwo.jpg" alt="thumbnail">
-			<img src="images/buttonThree.jpg" alt="thumbnail">
-		</nav>
-	</footer>
+    <footer>
+        <!-- <h2 class="hidden">Switch the Puzzle</h2> -->
+        <p>click thumb to change pieces!</p>
+        <nav id="buttonHolder">
+            <h3 class="hidden">Select Image</h3>
+            <img src="images/buttonZero.jpg" data-bgkey="0" alt="puzzle background image">
+            <img src="images/buttonOne.jpg" data-bgkey="1" alt="puzzle background image">
+            <img src="images/buttonTwo.jpg" data-bgkey="2" alt="puzzle background image">
+            <img src="images/buttonThree.jpg" data-bgkey="3" alt="puzzle background image">
+        </nav>
+    </footer>
 
-	<script src="script/app.js"></script>
+    <script src="script/app.js"></script>
 </body>
+
 </html>
