--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <!-- these are the draggable pieces -> drag them to the right -->
         <div class="puzzle-pieces">
             <h3 class="hidden">The Drag Zone</h3>
-            <img id='image0' src="images/topLeft0.jpg" alt="top left" class="puzzle-image 0" draggable="true">
-            <img id='image1' src="images/topRight0.jpg" alt="top right" class="puzzle-image 1" draggable="true">
-            <img id='image2' src="images/bottomLeft0.jpg" alt="bottom left" class="puzzle-image 2" draggable="true">
-            <img id='image3' src="images/bottomRight0.jpg" alt="bottom right" class="puzzle-image 3" draggable="true">
+            <img id='image0' src="images/topLeft0.jpg" alt="top left" class="puzzle-image" draggable="true">
+            <img id='image1' src="images/topRight0.jpg" alt="top right" class="puzzle-image" draggable="true">
+            <img id='image2' src="images/bottomLeft0.jpg" alt="bottom left" class="puzzle-image" draggable="true">
+            <img id='image3' src="images/bottomRight0.jpg" alt="bottom right" class="puzzle-image" draggable="true">
         </div>
 
         <!-- drop the puzzle pieces here -->
